# FaceID

./: .env  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  docker-compose-https.yml  docker-compose.yml  env.example  faceid.db  migrations.sql  nginx-https.conf  package-lock.json  requirements-simple.txt  requirements.txt  setup-https.sh
.github/workflows/: deploy.yml
app/: auth.py  auth_api_key.py  database.py  face_engine_arcface.py  main.py  models.py  nn.py  schemas.py  tenant_guard.py
app/core/: config.py
app/routers/: auth_router.py  face_router.py  liveness_router.py
face-engine/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
face-engine/scripts/: build_linux.sh  run_local.sh
face-engine/src/: CMakeLists.txt  db.cpp  db.h  embedding.cpp  embedding.h  main.cpp
face-engine/tests/: CMakeLists.txt  tests.cpp
frontend/: Dockerfile  env.example  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminDashboard.tsx  FaceEnrollment.tsx  FaceEnrollmentModern.tsx  FaceVerification.tsx  ImageGallery.tsx  LivenessDetection.tsx  Login.tsx  Signup.tsx
frontend/src/lib/: branding.tsx
frontend/src/services/: api.ts
scripts/: db_check.py  deploy.bat  deploy.sh  init_db.py
src/: App.css  App.tsx  index.css
src/components/: AdminDashboard.tsx  Dashboard.tsx  FaceEnrollment.tsx  FaceVerification.tsx  LivenessDetection.tsx  Login.tsx  Signup.tsx
src/components/admin/: Analytics.tsx  BranchManagement.tsx  (+3 more)
src/services/: api.ts
ssl/: cert.pem  key.pem
(+11 files in other folders)
